--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "postinstall": "ng build — aot — prod"
+    "postinstall": "ng build — aot — prod",
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
@@ -44,6 +44,7 @@
     "typescript": "~4.0.2"
   },
   "engines": {
-     "node": "12.18.3", "npm": "6.14.6"
+    "node": "12.18.3",
+    "npm": "6.14.6"
   }
 }
